# AIWorld

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
aifoundry/app/: config.py  main.py
aifoundry/app/api/: __init__.py  router.py  schemas.py
aifoundry/app/core/: __init__.py
aifoundry/app/core/agents/: __init__.py
aifoundry/app/core/agents/base/: __init__.py  agent.py  config_schema.py  tools.py
aifoundry/app/core/agents/electricity/: config.json
aifoundry/app/core/agents/salary/: config.json
aifoundry/app/core/agents/scraper/: __init__.py  agent.py  memory.py  output_parser.py  prompts.py  tool_executor.py
aifoundry/app/core/agents/scraper/social_comments/: config.json
aifoundry/app/core/models/: __init__.py  llm.py
aifoundry/app/mcp_servers/: __init__.py
aifoundry/app/schemas/: agent_responses.py
aifoundry/app/utils/: __init__.py  country.py  parsing.py  rate_limiter.py  simple_scraper.py  text.py
aifoundry/tests/: conftest.py
aifoundry/tests/integration/: test_api_endpoints.py
aifoundry/tests/unit/: test_agent_responses.py  test_config_schema.py  test_country.py  test_memory.py  test_output_parser.py  test_parsing.py  test_prompts.py  test_rate_limiter.py  test_scraper_agent.py  test_text_utils.py  test_tool_executor.py
docs/: AGENTS.md  FRONTEND_DESIGN_PROPOSAL.md  MCP.md  PLAN_MEJORAS.md  REFACTORING_CHECKLIST.md  ROADMAP.md
scripts/: start.sh  stop.sh  test_all_phases.py  test_brave_mcp.py  test_electricity_agent.py  test_litellm.py  test_memory_multiturn.py  test_playwright_mcp.py  test_salary_agent.py  test_scraper_agent.py  test_social_comments_agent.py
